--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -101,6 +101,8 @@ flutter:
     - assets/ticket.png
     - assets/ticket2.png
     - assets/emblem2.png
+    - assets/cheer/
+    - assets/bearstagram2.png
     - lib/Doosan/icons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
