--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.14.0 <3.0.0"
+  sdk: ">=3.0.0 <4.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -35,14 +35,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  get: 
+  get:
   expandable_text: ^2.3.0
   quiver: ^3.1.0
-  firebase_core: ^2.3.0
-  firebase_auth: ^4.1.5
-  google_sign_in: ^5.4.2
-  flutterfire: ^0.0.1
-  cloud_firestore: ^4.1.0
+  firebase_core: ^2.15.1
+  firebase_auth: ^4.7.3
+  cloud_firestore: ^4.8.5
   image_picker: ^0.8.6
   firebase_storage: ^11.0.6
   photo_manager: ^2.5.2
@@ -51,17 +49,16 @@ dependencies:
   timeago: ^3.3.0
   animated_splash_screen: ^1.2.0
   url_launcher: ^6.1.7
-  kakao_flutter_sdk: ^1.3.1 # 전체 추가
-  kakao_flutter_sdk_user: ^1.3.1 # 카카오 로그인
-  kakao_flutter_sdk_talk: ^1.3.1 # 카카오톡(소셜, 메시지)
+  kakao_flutter_sdk: ^1.5.0 # 전체 추가
+  kakao_flutter_sdk_user: ^1.5.0 # 카카오 로그인
+  kakao_flutter_sdk_talk: ^1.5.0 # 카카오톡(소셜, 메시지)
   table_calendar: ^3.0.6
   intl: ^0.17.0
   transition: ^2.0.2
   contained_tab_bar_view: ^0.8.0
-  youtube_player_flutter: ^8.1.2
+  youtube_player_flutter:
   flutter_svg: ^1.1.1
   google_fonts: ^3.0.1
-  new_gradient_app_bar: ^0.2.0
   timer_builder: ^2.0.0
   cached: ^1.6.0
   network: ^1.0.0-nullsafety.0
@@ -69,6 +66,10 @@ dependencies:
   flutter_naver_login: ^1.7.0
   carousel_slider: ^4.2.1
   carousel_indicator: ^1.0.6
+  provider: ^6.0.5
+  page_transition: ^2.0.9
+  flutter_inappwebview: ^5.7.2+3
+  google_nav_bar: ^5.0.6
 
 dev_dependencies:
   flutter_test:
@@ -113,6 +114,8 @@ flutter:
     - assets/bearstagram2.png
     - assets/flag.jpg
     - assets/flag2.jpg
+    - assets/flag3.jpg
+    - assets/flag4.jpg
     - assets/Logo/
     - assets/story/
     - assets/naver/
